test/spec_vectors/memory_copy/fail/module_23.wat
(module (memory 1 1) (func (export "testfn") (memory.copy (i32.const 10) (f32.const 20) (i32.const 30))))